--- a/index.html
+++ b/index.html
@@ -1,64 +1,100 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Vue Test</title>
-        <!-- Vue.js を読み込む -->
-        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-        <style>
-            #app-2 .error {
-                color: red;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="app-1">{{ message }}</div>
-        <script>
-            var app1 = new Vue({
-                el: '#app-1',
-                data: { message: 'Hello World!' }
+  <head>
+    <meta charset="utf-8" />
+    <title>Vue Test</title>
+    <!-- Vue.js を読み込む -->
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <style>
+      #app-2 .error {
+        color: red;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="app-1">{{ message }}</div>
+    <script>
+      var app1 = new Vue({
+        el: "#app-1",
+        data: { message: "Hello World!" },
+      });
+    </script>
 
-            })
-        </script>
+    <div id="app-2">
+      <input type="text" v-model="message" />
+      <div class="error" v-if="error.require">必須項目です。</div>
+      <div class="error" v-if="error.tooLong">長すぎます。</div>
+    </div>
+    <script>
+      var app2 = new Vue({
+        el: "#app-2",
+        watch: {
+          message: function (newVal, oldVal) {
+            this.error.require = newVal.length < 1;
+            this.error.tooLong = newVal.length > 5;
+          },
+        },
+        data: {
+          message: "Sample",
+          error: {
+            require: false,
+            tooLong: false,
+          },
+        },
+      });
+    </script>
 
-        <div id="app-2">
-            <input type="text" v-model="message">
-            <div class="error" v-if="error.require">必須項目です。</div>
-            <div class="error" v-if="error.tooLong">長すぎます。</div>
-        </div>
-        <script>
-            var app2 = new Vue({
-                el: '#app-2',
-                watch: {
-                    message: function(newVal, oldVal){
-                        this.error.require = (newVal.length < 1);
-                        this.error.tooLong = (newVal.length > 5);
-                    }
-                },
-                data: {
-                    message: 'Sample',
-                    error: {
-                        require: false,
-                        tooLong: false,
-                    }
-                }
-            })
-        </script>
+    <div id="app-3">
+      <!-- Vueインスタンスのmessageプロパティをツールチップ(title)にBindしている -->
+      <span v-bind:title="message">
+        Hover your mouse over me for a few seconds to see my dynamically bound
+        title!
+      </span>
+    </div>
+    <script>
+      var app3 = new Vue({
+        el: "#app-3",
+        data: {
+          message: "You loaded this page on " + new Date().toLocaleString(),
+        },
+      });
+    </script>
 
-        <div id="app-3">
-            <!-- VueインスタンスのmessageプロパティをツールチップにBindしている -->
-            <span v-bind:title="message">
-              Hover your mouse over me for a few seconds
-              to see my dynamically bound title!
-            </span>
-        </div>
-        <script>
-            var app3 = new Vue({
-                el: '#app-3',
-                data: {
-                    message: 'You loaded this page on ' + new Date().toLocaleString()
-                }
-            })
-        </script>
-    </body>
+    <hr>
+    <!-- 条件分岐 -->
+    <div id="app-4">
+      <!-- app4 の seen を false にすると消える -->
+      <span v-if="seen">Now you see me</span>
+    </div>
+    <script>
+      var app4 = new Vue({
+        el: '#app-4',
+        data: {
+          seen: true
+        }
+      })
+    </script>
+
+    <hr>
+    <!-- forループ -->
+    <div id="app-5">
+      <ol>
+        <li v-for="todo in todos">
+          {{ todo.text }}
+        </li>
+      </ol>
+    </div>
+    <script>
+      var app5 = new Vue({
+        el: '#app-5',
+        data: {
+          todos: [
+            { text: 'Learn JavaScript' },
+            { text: 'Learn Vue' },
+            { text: 'Build something awesome' }
+          ]
+        }
+      })
+    </script>
+  </body>
 </html>
