--- a/index.html
+++ b/index.html
@@ -11,12 +11,39 @@
       }
     </style>
   </head>
+
   <body>
     <div id="app-1">{{ message }}</div>
     <script>
       var app1 = new Vue({
         el: "#app-1",
         data: { message: "Hello World!" },
+        <!-- ライフサイクルフック -->
+        beforeCreate: function () {
+          console.log("beforeCreate")
+        },
+        created: function () {
+          console.log("created")
+          // `this` は vm インスタンスを指します
+          console.log('message is: ' + this.message)
+          console.log('$data.message is: ' + this.$data.message)  // これでも同じ意味になる
+        },
+        beforeMount: function(){
+          console.log("beforeMount")
+        },
+        mounted: function () {
+          console.log("mounted")
+        },
+        <!-- 以下はここでは呼ばれない -->
+        updated: function () {
+          console.log("updated")
+        },
+        beforeDestroy: function(){
+          console.log("beforeDestroy")
+        },
+        destroyed: function () {
+          console.log("destroyed")
+        },
       });
     </script>
 
