--- a/index2.html
+++ b/index2.html
@@ -157,6 +157,24 @@
         <option>C</option>
       </select>
       <span>Selected: {{ multiSelected }}</span><br>
+      <!-- チェックボックス（true_value/false_value） -->
+      <input id="checkboxYN" type="checkbox" v-model="toggle"
+             true-value="yes" false-value="no">
+      <label for="checkboxYN">{{ toggle }}</label><br>
+      <!-- ラジオボタン ※v-bind -->
+      <input type="radio" id="v-one" v-model="radioV" v-bind:value="va">
+      <label for="v-one">One</label><br>
+      <input type="radio" id="v-two" v-model="radioV" v-bind:value="vb">
+      <label for="v-two">Two</label><br>
+      <span>Picked: {{ radioV.value }}</span><br>
+      <!-- コンボボックス ※v-bind -->
+      <select v-model="selectedV">
+        <!-- インラインオブジェクトリテラル -->
+        <option disabled value="">Please select one</option>
+        <option v-bind:value="{ number: 123, phone: '06' }">Osaka</option>
+        <option v-bind:value="{ number: 234, phone: '03' }">Tokyo</option>
+      </select>
+      <span>Selected: {{ selectedV }}</span><br>
     </div>
     <script>
       var example5 = new Vue({
@@ -173,7 +191,15 @@
             { text: 'One', value: 'A' },
             { text: 'Two', value: 'B' },
             { text: 'Three', value: 'C' },
-          ]
+          ], 
+
+          toggle: "yes",
+
+          va: { name: "TestA", value: 100 },
+          vb: { name: "TestB", value: 200 },
+          radioV: "",
+
+          selectedV: "",
         },
         methods: {
           submit: function () {
